Fix background color cutoff

--- a/src/global.css
+++ b/src/global.css
@@ -3,6 +3,7 @@ html, body {
   padding: 0;
   font-family: 'Inter', sans-serif;
   font-size: 16px;
+  height: 100%;
   color: #ccc;
   background-color: hsl(224, 35%, 8%);
 }
